crates/ruff/src/rules/flake8_pyi/snapshots/ruff__rules__flake8_pyi__tests__PYI041_PYI041.py.snap
---
source: crates/ruff/src/rules/flake8_pyi/mod.rs
---
PYI041.py:22:14: PYI041 Use `float` instead of `int | float`
   |
22 | def f0(arg1: float | int) -> None:
   |              ^^^^^^^^^^^ PYI041
23 |     ...
   |

PYI041.py:26:30: PYI041 Use `complex` instead of `float | complex`
   |
26 | def f1(arg1: float, *, arg2: float | list[str] | type[bool] | complex) -> None:
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI041
27 |     ...
   |

PYI041.py:30:28: PYI041 Use `float` instead of `int | float`
   |
30 | def f2(arg1: int, /, arg2: int | int | float) -> None:
   |                            ^^^^^^^^^^^^^^^^^ PYI041
31 |     ...
   |

PYI041.py:38:24: PYI041 Use `float` instead of `int | float`
   |
38 | async def f4(**kwargs: int | int | float) -> None:
   |                        ^^^^^^^^^^^^^^^^^ PYI041
39 |     ...
   |

PYI041.py:46:24: PYI041 Use `complex` instead of `float | complex`
   |
44 |         ...
45 | 
46 |     def bad(self, arg: int | float | complex) -> None:
   |                        ^^^^^^^^^^^^^^^^^^^^^ PYI041
47 |         ...
   |

PYI041.py:46:24: PYI041 Use `complex` instead of `int | complex`
   |
44 |         ...
45 | 
46 |     def bad(self, arg: int | float | complex) -> None:
   |                        ^^^^^^^^^^^^^^^^^^^^^ PYI041
47 |         ...
   |


