crates/ruff/src/rules/flake8_pyi/snapshots/ruff__rules__flake8_pyi__tests__PYI041_PYI041.pyi.snap
---
source: crates/ruff/src/rules/flake8_pyi/mod.rs
---
PYI041.pyi:21:14: PYI041 `int` is redundant in a union with `float`.
   |
21 | def f0(arg1: float | int) -> None: ...  # PYI041
   |              ^^^^^^^^^^^ PYI041
   |

PYI041.pyi:24:30: PYI041 `float` is redundant in a union with `complex`.
   |
24 | def f1(arg1: float, *, arg2: float | list[str] | type[bool] | complex) -> None: ...  # PYI041
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI041
   |

PYI041.pyi:27:28: PYI041 `int` is redundant in a union with `float`.
   |
27 | def f2(arg1: int, /, arg2: int | int | float) -> None: ...  # PYI041
   |                            ^^^^^^^^^^^^^^^^^ PYI041
   |

PYI041.pyi:33:24: PYI041 `int` is redundant in a union with `float`.
   |
33 | async def f4(**kwargs: int | int | float) -> None: ...  # PYI041
   |                        ^^^^^^^^^^^^^^^^^ PYI041
   |

PYI041.pyi:39:24: PYI041 `float` is redundant in a union with `complex`.
   |
37 |     def good(self, arg: int) -> None: ...
38 | 
39 |     def bad(self, arg: int | builtins.float | complex) -> None: ...  # PYI041
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI041
   |

PYI041.pyi:39:24: PYI041 `int` is redundant in a union with `complex`.
   |
37 |     def good(self, arg: int) -> None: ...
38 | 
39 |     def bad(self, arg: int | builtins.float | complex) -> None: ...  # PYI041
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI041
   |


