crates/ruff/src/rules/flake8_pyi/snapshots/ruff__rules__flake8_pyi__tests__PYI042_PYI042.pyi.snap
---
source: crates/ruff/src/rules/flake8_pyi/mod.rs
---
PYI042.pyi:10:1: PYI042 Type alias `just_literals_pipe_union` should be CamelCase
   |
10 | )
11 | 
12 | just_literals_pipe_union: TypeAlias = Literal[True] | Literal['idk']  # PYI042, since not camel case
   | ^^^^^^^^^^^^^^^^^^^^^^^^ PYI042
13 | PublicAliasT: TypeAlias = str | int
14 | PublicAliasT2: TypeAlias = Union[str, bytes]
   |

PYI042.pyi:17:1: PYI042 Type alias `snake_case_alias1` should be CamelCase
   |
17 | _PrivateAliasS2: TypeAlias = Annotated[str, "also okay"]
18 | 
19 | snake_case_alias1: TypeAlias = str | int  # PYI042, since not camel case
   | ^^^^^^^^^^^^^^^^^ PYI042
20 | _snake_case_alias2: TypeAlias = Literal["whatever"]  # PYI042, since not camel case
21 | Snake_case_alias: TypeAlias = int | float # PYI042, since not camel case
   |

PYI042.pyi:18:1: PYI042 Type alias `_snake_case_alias2` should be CamelCase
   |
18 | snake_case_alias1: TypeAlias = str | int  # PYI042, since not camel case
19 | _snake_case_alias2: TypeAlias = Literal["whatever"]  # PYI042, since not camel case
   | ^^^^^^^^^^^^^^^^^^ PYI042
20 | Snake_case_alias: TypeAlias = int | float # PYI042, since not camel case
   |

PYI042.pyi:19:1: PYI042 Type alias `Snake_case_alias` should be CamelCase
   |
19 | snake_case_alias1: TypeAlias = str | int  # PYI042, since not camel case
20 | _snake_case_alias2: TypeAlias = Literal["whatever"]  # PYI042, since not camel case
21 | Snake_case_alias: TypeAlias = int | float # PYI042, since not camel case
   | ^^^^^^^^^^^^^^^^ PYI042
22 | 
23 | # check that this edge case doesn't crash
   |


