crates/ruff/src/rules/flake8_pyi/snapshots/ruff__rules__flake8_pyi__tests__PYI043_PYI043.pyi.snap
---
source: crates/ruff/src/rules/flake8_pyi/mod.rs
---
PYI043.pyi:10:1: PYI043 Private type alias `_PrivateAliasT` should not be suffixed with `T` (the `T` suffix implies that an object is a TypeVar)
   |
10 | )
11 | 
12 | _PrivateAliasT: TypeAlias = str | int  # PYI043, since this ends in a T
   | ^^^^^^^^^^^^^^ PYI043
13 | _PrivateAliasT2: TypeAlias = typing.Any  # PYI043, since this ends in a T
14 | _PrivateAliasT3: TypeAlias = Literal["not", "a", "chance"]  # PYI043, since this ends in a T
   |

PYI043.pyi:11:1: PYI043 Private type alias `_PrivateAliasT2` should not be suffixed with `T` (the `T` suffix implies that an object is a TypeVar)
   |
11 | _PrivateAliasT: TypeAlias = str | int  # PYI043, since this ends in a T
12 | _PrivateAliasT2: TypeAlias = typing.Any  # PYI043, since this ends in a T
   | ^^^^^^^^^^^^^^^ PYI043
13 | _PrivateAliasT3: TypeAlias = Literal["not", "a", "chance"]  # PYI043, since this ends in a T
14 | just_literals_pipe_union: TypeAlias = Literal[True] | Literal['idk']
   |

PYI043.pyi:12:1: PYI043 Private type alias `_PrivateAliasT3` should not be suffixed with `T` (the `T` suffix implies that an object is a TypeVar)
   |
12 | _PrivateAliasT: TypeAlias = str | int  # PYI043, since this ends in a T
13 | _PrivateAliasT2: TypeAlias = typing.Any  # PYI043, since this ends in a T
14 | _PrivateAliasT3: TypeAlias = Literal["not", "a", "chance"]  # PYI043, since this ends in a T
   | ^^^^^^^^^^^^^^^ PYI043
15 | just_literals_pipe_union: TypeAlias = Literal[True] | Literal['idk']
16 | PublicAliasT: TypeAlias = str | int
   |


