crates/ruff/src/rules/flake8_pyi/snapshots/ruff__rules__flake8_pyi__tests__PYI044_PYI044.pyi.snap
---
source: crates/ruff/src/rules/flake8_pyi/mod.rs
---
PYI044.pyi:2:1: PYI044 `from __future__` import annotations has no effect in stub files, since type checkers automatically treat stubs as having those semantics
  |
1 | # Bad import.
2 | from __future__ import Something # PYI044, since this imports from __future__.
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI044
3 | 
4 | # Good imports.
  |


