crates/ruff/src/rules/flake8_pyi/snapshots/ruff__rules__flake8_pyi__tests__PYI046_PYI046.py.snap
---
source: crates/ruff/src/rules/flake8_pyi/mod.rs
---
PYI046.py:5:7: PYI046 Private protocol `_Foo` is never used
  |
5 | class _Foo(Protocol):
  |       ^^^^ PYI046
6 |     bar: int
  |

PYI046.py:9:7: PYI046 Private protocol `_Bar` is never used
   |
 9 | class _Bar(typing.Protocol):
   |       ^^^^ PYI046
10 |     bar: int
   |


